# embedded-reneder

./: CMakeLists.txt  README.md  build.ps1  main.c  setup_sdl2.ps1
